fix login page layout issue and boder radius inside image resolved

--- a/src/index.css
+++ b/src/index.css
@@ -6,11 +6,9 @@
 }
 
 .form-container {
-  border: 1px solid black;
-  background: rgba(255, 255, 255, 0.8);
   border-radius: 10px;
   padding: 20px;
-  margin-top: 50px;
+  margin: 50px;
 }
 
 .form-field-container {
